tests/miz/pass/types/pass_type_elaboration_local_mode_reserved_variable_inequality_001.miz
definition
  mode LocalModeInequalityDef: LocalModeInequality is set;
end;

reserve x for LocalModeInequality;
theorem LocalModeReservedVariableInequalityPayloadBoundary: x <> x;
