tests/miz/fail/types/fail_type_elaboration_mode_structure_definition_gap_001.miz
definition
  struct DefinitionStructPayloadBoundary where
    field carrier -> set;
  end;

  mode DefinitionModePayloadBoundaryDef: DefinitionModePayloadBoundary is set;
end;
